manifests/website-to-remarkable/website-to-remarkable.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-to-remarkable
  namespace: website-to-remarkable
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: web
  - port: 8000
    targetPort: 8000
    name: noauth
  selector:
    app: website-to-remarkable
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-to-remarkable
  namespace: website-to-remarkable
  labels:
    app: website-to-remarkable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-to-remarkable
  template:
    metadata:
      labels:
        app: website-to-remarkable
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://localhost:8000
        - --http-address=$(HOST_IP):8080
        - --redirect-url=https://website-to-remarkable.cluster.fun/oauth2/callback
        - --email-domain=marcusnoble.co.uk
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQN
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.1
        name: oauth-proxy
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 125Mi
          requests:
            memory: 125Mi
      - name: web
        image: docker.cluster.fun/averagemarcus/website-to-remarkable:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-to-remarkable
  namespace: website-to-remarkable
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - website-to-remarkable.cluster.fun
    secretName: website-to-remarkable-ingress
  rules:
  - host: website-to-remarkable.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: website-to-remarkable
          servicePort: 80

---
